# plop

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  gorse.toml  postgres.sql
src/: main.rs
src/entity/: like.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  video.rs
src/service/: index.rs  like.rs  mod.rs  results.rs  share.rs  thumbnail.rs  together.rs  upload.rs  video.rs  watch.rs
src/util/: channel.rs  mod.rs  video.rs
static/: site.webmanifest
static/component/account-button/: account-button.mjs
static/component/upload-button/: upload-button.mjs
static/component/video-player/: video-player.css  video-player.mjs
static/component/video-preview/: video-preview.mjs
static/css/: font.css  global.css  index.css  palette.css  player.css  results.css  together.css  upload.css  watch.css
static/html/: index.html  upload.html
static/js/: account-button.mjs  encoder.mjs  index.mjs  player.mjs  results.mjs  source.mjs  together.mjs  upload-old.js  upload-worker.js  upload.js  upload.mjs  video-source.mjs  watch-async.js  watch.js  watch.mjs
static/js/upload/: high-quality-encoder.js  high-quality-encoder.mjs  low-quality-encoder.js  low-quality-encoder.mjs
static/js/utils/: count.mjs  duration.mjs  views.mjs  vues.mjs
templates/: clerk-config.hbs  clerk-script.hbs  index.hbs  nav-bar.hbs  player.hbs  results.hbs  theme-script.hbs  together.hbs  upload.hbs  watch.hbs
