[package]
name = "plop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
actix-web = { version = "4", features = ["rustls"] }
actix-web-validator = "5"
actix-files = "0.6"
actix-cors = "0.6"
rustls = "0.20"
rustls-pemfile = "*"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
    "with-uuid",
] }
redis = { version = "0.23", features = ["tokio-comp"] }
