[package]
name = "plop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
serde = "1"
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
handlebars = { version = "5", features = ["dir_source"] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
actix-web = { version = "4", features = ["rustls-0_22"] }
actix-web-validator5 = "1"
actix-files = "0.6"
actix-cors = "0.7"
rustls = "0.22"
rustls-pemfile = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
data-url = "0.3"
file-format = "0.24"
matroska-demuxer = "0.5"
webm = "1"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-actix-rustls",
    "macros",
    "with-uuid",
] }
fred = "9"
anyhow = "1"
